--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,6 +13,12 @@
         android:enabled="true" />
 
     <item
+        android:id="@+id/nav_chat"
+        android:icon="@android:drawable/ic_dialog_info"
+        android:title="AI Chat"
+        android:enabled="true" />
+
+    <item
         android:id="@+id/nav_summary"
         android:icon="@android:drawable/ic_menu_info_details"
         android:title="Summary"
